syntax = "proto3";
package commercionetwork.commercionetwork.documents;

// Options section
option go_package = "github.com/commercionetwork/commercionetwork/x/documents/types";

// Import section
import "gogoproto/gogo.proto";

message DocumentChecksum {
  string value = 1;
  string algorithm = 2;
}
