syntax = "proto3";
package commercionetwork.commercionetwork.documents;

// Options section
option go_package = "github.com/commercionetwork/commercionetwork/x/documents/types";

// Import section
import "gogoproto/gogo.proto";
import "commercionetwork/documents/documentEncryptionKey.proto";
import "amino/amino.proto";

message DocumentEncryptionData {
  option (amino.name)           = "commercionetwork/DocumentEncryptionData";
  
  repeated documents.DocumentEncryptionKey keys = 1;
  repeated string encryptedData = 2;
}
