syntax = "proto3";
package commercionetwork.commercionetwork.documents;

// Options section
option go_package = "github.com/commercionetwork/commercionetwork/x/documents/types";

// Import section
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

message DocumentEncryptionKey {
  option (amino.name)           = "commercionetwork/DocumentEncryptionKey";

  string recipient = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string Value = 2;
}
